[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "smtp_server"
version = "0.1.0"

[dependencies]
failure = "0.1"
mailparse = "0.8"
arrayref = "0.3"
lazy_static = "1.3"
runtime = "0.3.0-alpha.6"
futures-preview = "0.3.0-alpha.17"
native-tls = "0.2"
log = "0.4"
env_logger = "0.6"
pin-utils = "0.1.0-alpha.4"
