[package]
name = "lib_async"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.4"
tokio-tls = "0.2.0-alpha.4"
tokio-net = "0.2.0-alpha.4"
async-trait = "0.1"
bytes = "0.4"
