[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "pq_server"
version = "0.1.0"

[dependencies]
env_logger = "0.7"
postgres = { version = "0.16.0-rc.2", features = ["with-uuid-0_7"] }
uuid = "0.7"
failure = "0.1"
dotenv = "0.14"
fallible-iterator = "*"

[dependencies.smtp_server]
path = "../lib_async"
package = "lib_async"

